--- a/artifact-draft.cabal
+++ b/artifact-draft.cabal
@@ -18,6 +18,8 @@ library
   exposed-modules:     Data.Card, Data.Pack
   build-depends:       base >= 4.7 && < 5
                      , aeson
+                     , eventful-core
+                     , eventful-memory
                      , servant-server
                      , text
                      , wai
