trying out eventful, need to look at other examples for how to interact between events

--- a/artifact-draft.cabal
+++ b/artifact-draft.cabal
@@ -21,6 +21,7 @@ library
                      , eventful-core
                      , eventful-memory
                      , servant-server
+                     , stm
                      , text
                      , wai
                      , warp
