--- a/stack.yaml
+++ b/stack.yaml
@@ -34,12 +34,17 @@ resolver: lts-12.22
 #  - auto-update
 #  - wai
 packages:
-- .
+  - .
+  - location:
+      git: jdreaver/eventful
+      commit: master
+      subdirs:
+        - eventful-core
+        - eventful-memory
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
-# extra-deps: []
-
+extra-deps: [vector-shuffling-1.1]
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
